# minimal-example

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
