[package]
name = "example-hello-world-api"
authors = ["Jakub Zajkowski <ja.zajko@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zajko/minimal-example"
# documentation = ""
# homepage = ""

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
example-hello-world-types = { path = "../types", version = "0.1.0" }
warp = "0.3.5"
