[package]
name = "example-hello-world-types"
authors = ["Jakub Zajkowski <ja.zajko@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zajko/minimal-example"
# documentation = ""
# homepage = ""

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
